chore: replace joda time with java.time